<resources>
    <string name="app_name">AndroidCustomViews</string>
    <string name="stack_image_view">Stack Image View</string>
    <string name="circular_image">Circular Image</string>
    <string name="stack_text_view">Stack Text View</string>
    <string name="timeline_view">Timeline View</string>
    <string name="poll_view">Poll View</string>
    <string name="badge_view">Badge View</string>
    <string name="square_image">Square Image</string>
    <string name="divider_view">Divider View</string>
    <string name="mmt_viewpager">MMT ViewPager</string>
    <string name="facebook_like_emotions">Facebook like Emotions</string>
</resources>
